updates preview capitalization

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<meta name="twitter:card" value="summary">
 
 		<!-- Open Graph data -->
-		<meta property="og:title" content="baas" />
+		<meta property="og:title" content="BaaS" />
 		<meta property="og:type" content="article" />
 		<meta property="og:url" content="https://www.journalrx.com/" />
 		<meta property="og:image" content="https://journalrx.com/baas-preview.jpg" />
