updates domain name

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 		<!-- Open Graph data -->
 		<meta property="og:title" content="BaaS" />
 		<meta property="og:type" content="article" />
-		<meta property="og:url" content="https://www.journalrx.com/" />
-		<meta property="og:image" content="https://journalrx.com/baas-preview.jpg" />
+		<meta property="og:url" content="https://www.rxjournals.com/" />
+		<meta property="og:image" content="https://rxjournals.com/baas-preview.jpg" />
 		<meta property="og:description" content="An evening gratitude journal designed to improve your sleep" />
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
