--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<!--[if lt IE 9]>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
 		<![endif]-->
-		
+
 	</head>
 
 	<body>
@@ -64,6 +64,7 @@
 						    </div>
 						</form>
 					</div>
+					<div class="twitter-icon"></div> <a href="https://twitter.com/rxjournals"> Follow on Twitter</a>
 				</div>
 				<!--End mc_embed_signup-->
 			</div> 
