--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						    </div>
 						</form>
 					</div>
-					<div class="twitter-icon"></div> <a href="https://twitter.com/rxjournals"> Follow on Twitter</a>
+					<div class="twitter-icon"></div> <a href="https://twitter.com/rxjournals" class="twitter-link"> Follow on Twitter</a>
 				</div>
 				<!--End mc_embed_signup-->
 			</div> 
