--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<span style="display:block;color: #f0d928;margin-bottom:1rem;"><strong>Launching soon</strong></span>
 					<!-- Begin MailChimp Signup Form -->
 					<div id="mc_embed_signup">
-						<form action="https://rtmup.us11.list-manage.com/subscribe/post?u=a479617d8c74fb81582a3dca3&amp;id=cc5635d87b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+						<form action="https://rxjournals.us11.list-manage.com/subscribe/post?u=a479617d8c74fb81582a3dca3&amp;id=cc5635d87b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 						    <div id="mc_embed_signup_scroll">
 							<label for="mce-EMAIL"></label>
 							<input type="email" value="" name="EMAIL" class="baas-email" id="mce-EMAIL" placeholder="Enter your email" required>
