switches baas with RXJournals

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      	xmlns:fb="http://ogp.me/ns/fb#">
 	<head>
 		<meta charset="utf-8">
-		<title>BaaS</title>
+		<title>RXJournals</title>
 		<meta name="description" content="An evening gratitude journal designed to improve your sleep">
 		<meta name="author" content="SitePoint">
 
@@ -13,7 +13,7 @@
 		<meta name="twitter:card" value="summary">
 
 		<!-- Open Graph data -->
-		<meta property="og:title" content="BaaS" />
+		<meta property="og:title" content="RXJournals" />
 		<meta property="og:type" content="article" />
 		<meta property="og:url" content="https://www.rxjournals.com/" />
 		<meta property="og:image" content="https://rxjournals.com/baas-preview.jpg" />
@@ -48,7 +48,7 @@
 		    <div class="overlayed-content">
 		    <div id="polygon"></div>
 			    <div class="title-section">
-					<a href="#" class="logo"><img src="logo.svg">BaaS</a>
+					<a href="#" class="logo"><img src="logo.svg">RXJournals</a>
 					<h2>An evening gratitude journal<br><strong> designed to improve your sleep</strong></h2>
 					<p>Evidenced-based. Endorsed by doctors.<br> MIT 2019 Hacking Medicine Award Winner.</p>
 					<span style="display:block;color: #f0d928;margin-bottom:1rem;"><strong>Launching soon</strong></span>
@@ -76,7 +76,7 @@
 			</div>
 			<div class="feature-description">
 				<h2>Just what the doctor ordered</h2>
-				<p>The BaaS journal and the instructions inside were engineered by a team of top healthcare professionals and designers. Combining our expert knowledge with the latest behavioral health research, we crafted a simple, low-tech product to reduce insomnia and anxiety.</p>
+				<p>The RXJournal and the instructions inside were engineered by a team of top healthcare professionals and designers. Combining our expert knowledge with the latest behavioral health research, we crafted a simple, low-tech product to reduce insomnia and anxiety.</p>
 				<ul class="checkmarks">
 					<li>Designed to increase sleep duration and quality</li>
 					<li>Endorsed by physicians</li>
@@ -89,7 +89,7 @@
 		<section class="features-section stripe-primary">
 			<div class="feature-description">
 				<h2>Journal for a cause</h2>
-				<p>Help reduce stigma associated with mental illness. All BaaS purchases support four national mental health charities.</li>
+				<p>Help reduce stigma associated with mental illness. All RXJournal purchases support four national mental health charities.</li>
 				</ul>
 			</div>
 			<div class="feature-img-wrapper">
