Updates RXJournals to RXJournal

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      	xmlns:fb="http://ogp.me/ns/fb#">
 	<head>
 		<meta charset="utf-8">
-		<title>RXJournals</title>
+		<title>RXJournal</title>
 		<meta name="description" content="An evening gratitude journal designed to improve your sleep">
 		<meta name="author" content="SitePoint">
 
@@ -48,7 +48,7 @@
 		    <div class="overlayed-content">
 		    <div id="polygon"></div>
 			    <div class="title-section">
-					<a href="#" class="logo"><img src="logo.svg">RXJournals</a>
+					<a href="#" class="logo"><img src="logo.svg">RXJournal</a>
 					<h2>An evening gratitude journal<br><strong> designed to improve your sleep</strong></h2>
 					<p>Evidenced-based. Endorsed by doctors.<br> MIT 2019 Hacking Medicine Award Winner.</p>
 					<span style="display:block;color: #f0d928;margin-bottom:1rem;"><strong>Launching soon</strong></span>
